<resources>
    <string name="app_name">hw_2</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="enter_text">Enter text</string>
    <string name="submit">Submit</string>
    <string name="contact">Contacts</string>
    <string name="notification">Notifications</string>
    <string name="p">Profile</string>
    <string name="s">Settings</string>
    <string name="вв">Details</string>
</resources>