<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>
